# libtokamap-uda-datasource

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  uda_data_source.cpp  uda_data_source.hpp
.github/workflows/: build_binaries.yml
cmake/Modules/: FindUDA.cmake
examples/python/: config.toml  uda_mapper.py
examples/python/mastu_mappings/mastu/: globals.json  mappings.cfg.json
examples/python/mastu_mappings/mastu/magnetics/: mappings.json
src/: uda_data_source.cpp  uda_data_source.hpp
